<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".week6">


    <EditText
        android:id="@+id/rmb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/rmb_hint"
        android:textSize="25sp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/showTxt"
        android:textSize="35sp"
        android:text="@string/num"
        android:gravity="center" />

    <Button
        android:id="@+id/dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dollar"
        android:onClick="onClick"
        android:textSize="25sp"
        android:gravity="center" />

    <Button
        android:id="@+id/euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_euro"
        android:onClick="onClick"
        android:textSize="25sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/krw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_krw"
        android:onClick="onClick"
        android:textSize="25sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/opencfg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_open"
        android:textSize="25sp"
        android:gravity="center"
        android:onClick="openOne"
        android:layout_marginTop="24dp"/>

</LinearLayout>